<resources>
    <string name="app_name">HeaderAndFooter</string>
    <string name="add_text_to_header">Add Text To Header</string>
    <string name="add_text_to_footer">Add Text To Footer</string>
    <string name="select_logo">Select Logo</string>
    <string name="save">Save</string>
    <string name="enter_header_text">Enter Header Text</string>
    <string name="enter_footer_text">Enter Footer Text</string>
    <string name="add_logo">Add Logo</string>
    <string name="next_activity">Next Activity</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="enter_your_footer_messaage">Enter Your Footer Messaage</string>
    <string name="save_image">Save Image</string>
</resources>
